--- a/SmartPhones.html
+++ b/SmartPhones.html
@@ -16,7 +16,7 @@
         <span></span>
         <span></span>
         <ul id="menu">
-            <a href="https://s1ngle0f.github.io/Site/"><li>Version 2</li></a>
+            <a href="https://s1ngle0f.github.io/Site/%D0%93%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F.html"><li>Version 2</li></a>
             <a href="index.html"><li>Главная</li></a>
             <a href="#bottom"><li>Низ этой страницы</li></a>
             <a href="PCs.html"><li>ПК и ноуты</li></a>
